PROJECT(registration)

FIND_PACKAGE(PCL 1.2 REQUIRED)
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_INCLUDE_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})

#normal_estimation_using_integral_images
#set(INTEGRAL_IMAGES normal_estimation_using_integral_images)
#ADD_EXECUTABLE(${INTEGRAL_IMAGES} src/${INTEGRAL_IMAGES})
#TARGET_LINK_LIBRARIES(${INTEGRAL_IMAGES} ${PCL_LIBRARIES})

set(NDT normal_distribution_transform)
ADD_EXECUTABLE(${NDT} src/${NDT})
TARGET_LINK_LIBRARIES(${NDT} ${PCL_LIBRARIES})
